version/0.18/_sources/api/solver/_autosummary/settings/cross_section_multicomponent.rst.txt
:orphan:

.. _cross_section_multicomponent:

cross_section_multicomponent
============================

.. autoclass:: ansys.fluent.core.solver.settings_232.cross_section_multicomponent.cross_section_multicomponent
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`cross_section_multicomponent_child <cross_section_multicomponent_child>`


.. rubric:: Included in:

========================================================   ====================================

Parent                                                                                  Summary

========================================================   ====================================
:ref:`collision_cross_section <collision_cross_section>`       'collision_cross_section' child.

========================================================   ====================================

